# ui

./: .gitignore  Cargo.toml  MOBILE_APP_BLUEPRINT.txt  README.md  documentation.txt  index.html  input.css  package-lock.json  package.json  tailwind.config.js
public/: tailwind.css
scripts/: build_mobile_v2.ps1
src/: main.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: mod.rs  skeleton.rs
src/models/: auth.rs  candidate.rs  common.rs  contact.rs  interaction.rs  mod.rs  opportunity.rs
src/pages/: candidate_details.rs  candidates.rs  contacts.rs  interactions.rs  login.rs  match_results.rs  menu.rs  mod.rs  opportunities.rs  resume_matcher.rs
src/services/: api.rs
