[package]
name = "nuvio369-crm"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.5", features = ["router", "web"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
console_error_panic_hook = "0.1"
reqwest = { version = "0.11", features = ["json"] }
wasm-bindgen = "0.2"
gloo-timers = { version = "0.3.0", features = ["futures"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
