[package]
name = "mobile-app-blueprint"
version = "0.1.0"
description = "NuViO369 CRM Mobile App"
authors = ["you"]
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = ["api-all"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
