[package]
name = "nuvio369-crm-mobile"
version = "0.1.0"
description = "NuViO369 CRM Mobile App"
authors = ["you"]
edition = "2021"
rust-version = "1.57"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "nuvio369-crm-mobile"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["full"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
